crates/nexacore-runtime/tests/compile_fail/tier1_cannot_reach_backend_router.stderr
error[E0308]: mismatched types
  --> tests/compile_fail/tier1_cannot_reach_backend_router.rs:23:29
   |
23 |     let _ = router.generate(&tier1);
   |                    -------- ^^^^^^ expected `&Tier0Request<GenerateRequest>`, found `&Tier1Request<GenerateRequest>`
   |                    |
   |                    arguments to this method are incorrect
   |
   = note: expected reference `&Tier0Request<GenerateRequest>`
              found reference `&Tier1Request<GenerateRequest>`
note: method defined here
  --> src/provider.rs
   |
   |     pub async fn generate(
   |                  ^^^^^^^^
